@@ -2,6 +2,7 @@
 
 * Bugs fixed:
 
+  [#31267] misleading header iom128rfa1.h
   [#35197] sleep.h _BV defined as __BV in AT90S8515 section
   [#35226] Online-documentation broken - [...]
   [#35398] assert doesn't work unless stdlib.h is also included
